# pathy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  cli.py  docker-compose.dev.yml  docker-compose.yml  main copy.py  main.py  pyproject.toml  server.py  start.sh
agents/: base.py  courses.py  creators.py  ranking.py  resources.py  reviews.py  roadmap.py
agentui/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  tailwind.config.ts
agentui/src/: store.ts
agentui/src/api/: routes.ts
agentui/src/app/: globals.css  layout.tsx  page.tsx
agentui/src/components/chat/ChatArea/: ChatArea.tsx  MessageArea.tsx  ScrollToBottom.tsx
agentui/src/components/chat/ChatArea/ChatInput/: ChatInput.tsx
agentui/src/components/chat/ChatArea/Messages/: AgentThinkingLoader.tsx  ChatBlankState.tsx  MessageItem.tsx  Messages.tsx
agentui/src/components/chat/Sidebar/: ApiConfigModal.tsx  AuthToken.tsx  EntitySelector.tsx  ModeSelector.tsx  Sidebar.tsx
agentui/src/components/ui/: button.tsx  dialog.tsx  select.tsx  skeleton.tsx  sonner.tsx  textarea.tsx
agentui/src/components/ui/icon/: constants.tsx  types.ts
agentui/src/components/ui/tooltip/: tooltip.tsx
agentui/src/hooks/: useAIStreamHandler.tsx  useChatActions.ts  useSessionLoader.tsx
agentui/src/lib/: utils.ts
output/: roadmap_20260718_171857.json  roadmap_20260718_171857.md
tests/: test_base.py  test_cli.py  test_models.py  test_runtime_config.py
tools/: pages.py  search.py
utils/: console.py  logging.py  models.py  runtime_config.py  settings.py
(+8 files in other folders)
