[project]
name = "pathy-roadmap-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.7.4",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "openai>=1.0.0",
    "youtube-search",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "rich>=15.0.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
